<resources>
    <string name="app_name">Player-Roster</string>
    <string name="title_teams">Teams</string>
    <string name="title_players">Players</string>
    <string name="title_trainings">Trainings</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <!-- Team -->
    <string name="team_info">Team Info</string>
    <string name="new_team">New Team</string>
    <string name="add_new_team">Add New Team</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="city">City</string>
    <string name="add">Add</string>

    <!-- Player -->
    <string name="player_info">Player Info</string>
    <string name="new_player">New Player</string>
    <string name="add_new_player">Add New Player</string>
    <string name="team">Team</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="gender">Gender</string>
    <string name="jump_height">Jump Height</string>
    <string name="position">Position</string>

    <!-- Training -->
    <string name="training_schedule">Training Schedule</string>

    <!-- Validation -->
    <string name="invalid_value">Invalid Value</string>
    <string name="required">Required</string>
</resources>