<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/margin_medium">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/Theme.PlayerRoster.Toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/player_info_menu"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:title="@string/player_info"
                app:titleCentered="true"
                app:titleTextColor="?attr/colorOnPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:text="@string/new_player"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutTeam"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:textAlignment="viewStart"
            app:hintEnabled="true"
            app:hintTextColor="?colorSecondaryVariant"
            app:layout_constraintEnd_toEndOf="@+id/textViewName"
            app:layout_constraintStart_toStartOf="@+id/textViewName"
            app:layout_constraintTop_toBottomOf="@+id/textViewName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputTeam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:focusable="false"
                android:textIsSelectable="false"
                android:hint="@string/team"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutHeight"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:textAlignment="viewStart"
            app:hintEnabled="true"
            app:hintTextColor="?colorSecondaryVariant"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayoutTeam"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutTeam"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutTeam">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:focusable="false"
                android:textIsSelectable="false"
                android:hint="@string/height"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutWeight"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:textAlignment="viewStart"
            app:hintEnabled="true"
            app:hintTextColor="?colorSecondaryVariant"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayoutHeight"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutHeight"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutHeight">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:focusable="false"
                android:textIsSelectable="false"
                android:hint="@string/weight"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutJumpHeight"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:textAlignment="viewStart"
            app:hintEnabled="true"
            app:hintTextColor="?colorSecondaryVariant"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayoutWeight"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutWeight"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutWeight">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputJumpHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:focusable="false"
                android:textIsSelectable="false"
                android:hint="@string/jump_height"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutGender"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:textAlignment="viewStart"
            app:hintEnabled="true"
            app:hintTextColor="?colorSecondaryVariant"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayoutJumpHeight"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutJumpHeight"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutJumpHeight">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:focusable="false"
                android:textIsSelectable="false"
                android:hint="@string/gender"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPosition"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:textAlignment="viewStart"
            app:hintEnabled="true"
            app:hintTextColor="?colorSecondaryVariant"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayoutGender"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutGender"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutGender">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputPosition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:focusable="false"
                android:textIsSelectable="false"
                android:hint="@string/position"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>